# nba-team-analysis-reporting-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  auto_scheduler.py  docker-compose.yml  email_summary.py  generate_graphs.py  generate_pdf.py  main_analysis.py  pyproject.toml  render.yaml  requirements.txt  run_all.py  run_app.bat  wsgi.py
seed_data/: ATL_games.csv  ATL_summary.csv  BOS_games.csv  BOS_summary.csv  CHA_games.csv  CHA_summary.csv  CHI_games.csv  CHI_summary.csv  CLE_games.csv  CLE_summary.csv  DAL_games.csv  DAL_summary.csv  DEN_games.csv  DET_games.csv  DET_summary.csv  IND_games.csv  IND_summary.csv  LAL_summary.csv  MIA_games.csv  MIA_summary.csv  OKC_games.csv  OKC_summary.csv  ORL_games.csv  ORL_summary.csv  PHI_games.csv  PHI_summary.csv  POR_games.csv  POR_summary.csv  SAC_games.csv  SAC_summary.csv  TOR_games.csv  TOR_summary.csv  UTA_games.csv  UTA_summary.csv
src/nba_warriors_analysis/: __init__.py  analysis.py  cli.py  emailer.py  plotting.py  reporting.py  utils.py  webapp.py
src/nba_warriors_analysis/static/: style.css
src/nba_warriors_analysis/templates/: index.html
static/: style.css
templates/: index.html
tests/: test_analysis.py  test_reporting.py  test_utils.py
